# AVGM

./: pyproject.toml  setup.cfg  setup.py
avgm/: datasets.py  metrics.py  models.py
data/processed/: sample.h5  wordpiece-vocab.txt
