[metadata]
name = avgm
description = Python project for machine sentiment analysis of video game reviews
author = Henrique Magalhães Soares
licence = MIT
licence_file = LICENCE
platforms = unix, linux, osx, win32

[options]
packages = avgm
install_requires =
python_requires = >=3.8
package_dir =
    = .
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
loom = py.typed

[flake8]
max-line-length = 160